Fix overlapping @media

--- a/css/style.css
+++ b/css/style.css
@@ -325,7 +325,7 @@ margin: 0.8em 0;
   }
 
   #categoryGrid {
-    grid-template-rows: 420px 200px 30px 20px 360px 390px 130px 300px;
+    grid-template-rows: 420px 200px 30px 20px 360px 390px 130px 500px;
     grid-template-columns: 1fr;
     grid-template-areas:
       "picture"
